syntax = "proto3";

package hwscFileTransactionSvc;

// Service: define the methods that gRPC server can expose to the client
service FileTransactionService{
    rpc GetStatus (FileTransactionRequest) returns (FileTransactionResponse){}
    rpc UploadFile (stream UploadFileRequest) returns (FileTransactionResponse){}
    rpc DownloadZipFiles (FileTransactionRequest) returns (stream Chunk){}
}

message FileTransactionRequest{
    string message = 1;
    string name = 2;
    repeated string urls = 3;
}

message FileTransactionResponse{
    oneof status {uint32 code = 1;}
    string message = 2;
    string url = 3;
    int64 length = 4;
}

message Chunk{
    oneof test_oneof {
        bytes buffer = 1;
        string name = 2;
    }
}

message UploadFileRequest {
    oneof test_oneof {
        Metadata meta = 2;
        bytes buffer = 1;
    }
}

message Metadata {
    string name = 1;
    string data_format = 2;
}